# logging_sandbox

./: .gitignore  README.md  pyproject.toml
scripts/: run.py
scripts/output/log/: correlate2024-11-28-13:05:04rank000  correlate2024-11-28-13:05:04rank001
src/logging_sandbox/: logfactory.py
src/logging_sandbox/module1/: submod11.py
src/logging_sandbox/module2/: submod21.py
tests/: test_logfactory.py  test_submod11.py
